plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.1'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	testImplementation platform('org.junit:junit-bom:5.9.1')
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter'
	implementation 'com.vaadin.external.google:android-json:0.0.20131108.vaadin1'
	implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.1.8'
	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
	implementation 'org.springframework.data:spring-data-jpa:3.1.0'
	implementation 'org.apache.poi:poi:5.0.0'
	implementation 'org.apache.poi:poi-ooxml:5.0.0'

	implementation 'org.mongodb:mongodb-driver-sync:4.9.1'
	implementation 'org.mongodb:mongodb-driver-core:4.9.1'
	implementation 'org.mongodb:bson:4.9.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
